--- a/instant/instant.html
+++ b/instant/instant.html
@@ -1,1 +1,16 @@
-<head></head>
+<head>
+  <meta http-equiv="refresh" content="5; URL=https://sites.google.com/view/kita-g6-instant/" />
+  <title>
+    Redirecting...
+  </title>
+</head>
+
+<style>
+body {
+  background-image: url('https://raw.githubusercontent.com/yonatand1230/h6gbs/main/instant/instant_pic.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  
+}
+</style>
